--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,9 +1,9 @@
 [server]
-port = 5000
-address = "0.0.0.0"
-headless = true
-enableCORS = false
-enableXsrfProtection = false
+port = 8501
+address = "localhost"
+headless = false
+enableCORS = true
+enableXsrfProtection = true
 
 [browser]
 gatherUsageStats = false
